<resources>
    <string name="app_name">CoffeeApp</string>
    <string name="name">Name</string>
    <string name="topping">Topping</string>
    <string name="whipped_cream">Whipped _cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="sugar">Sugar</string>
    <string name="quantity">Quantity</string>
    <string name="initial_quantity_value">0</string>
    <string name="order">Order</string>
    <string name="thank_you">Thank you</string>
</resources>
